Added ridge with grid-search over lambda and eta. Will merge both functions

--- a/Project 2/Project 2.ipynb
+++ b/Project 2/Project 2.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -105,75 +105,20 @@
       "\n",
       "The R2 value for a polynomial of order 5, OLS train: 0.845568144932382\n",
       "The MSE value for a polynomial of order 5, OLS train: 0.012284534313214468\n",
-      "sam 16\n",
-      "\n",
-      "The R2 value for a polynomial of order 5, OLS train: 0.8368463862682052\n",
-      "The MSE value for a polynomial of order 5, OLS train: 0.012978320860910492\n",
-      "eta 0.001\n",
-      "sam 1\n",
-      "\n",
-      "The R2 value for a polynomial of order 5, OLS train: 0.9365057402696018\n",
-      "The MSE value for a polynomial of order 5, OLS train: 0.005050754664629951\n",
-      "sam 4\n",
-      "\n",
-      "The R2 value for a polynomial of order 5, OLS train: 0.9013500067130513\n",
-      "The MSE value for a polynomial of order 5, OLS train: 0.007847274948560847\n",
-      "sam 8\n",
-      "\n",
-      "The R2 value for a polynomial of order 5, OLS train: 0.8879045239654141\n",
-      "The MSE value for a polynomial of order 5, OLS train: 0.008916817848882557\n",
-      "sam 16\n",
-      "\n",
-      "The R2 value for a polynomial of order 5, OLS train: 0.885860384001654\n",
-      "The MSE value for a polynomial of order 5, OLS train: 0.009079422303221521\n",
-      "eta 0.01\n",
-      "sam 1\n",
-      "\n",
-      "The R2 value for a polynomial of order 5, OLS train: 0.9441862513683149\n",
-      "The MSE value for a polynomial of order 5, OLS train: 0.004439795856333216\n",
-      "sam 4\n",
-      "\n",
-      "The R2 value for a polynomial of order 5, OLS train: 0.950123500741937\n",
-      "The MSE value for a polynomial of order 5, OLS train: 0.003967507651128173\n",
-      "sam 8\n",
-      "\n",
-      "The R2 value for a polynomial of order 5, OLS train: 0.9408092178789836\n",
-      "The MSE value for a polynomial of order 5, OLS train: 0.0047084275046314255\n",
-      "sam 16\n",
-      "\n",
-      "The R2 value for a polynomial of order 5, OLS train: 0.9254559894720402\n",
-      "The MSE value for a polynomial of order 5, OLS train: 0.005929725151422843\n",
-      "eta 0.05\n",
-      "sam 1\n"
+      "sam 16\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/guest/PycharmProjects/FYS/lib/python3.7/site-packages/ipykernel_launcher.py:32: RuntimeWarning: overflow encountered in matmul\n",
-      "/home/guest/PycharmProjects/FYS/lib/python3.7/site-packages/ipykernel_launcher.py:35: RuntimeWarning: invalid value encountered in add\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "The R2 value for a polynomial of order 5, OLS train: nan\n",
-      "The MSE value for a polynomial of order 5, OLS train: nan\n",
-      "sam 4\n",
-      "\n",
-      "The R2 value for a polynomial of order 5, OLS train: 0.9493404798411417\n",
-      "The MSE value for a polynomial of order 5, OLS train: 0.004029794328443367\n",
-      "sam 8\n",
-      "\n",
-      "The R2 value for a polynomial of order 5, OLS train: 0.9367896569574755\n",
-      "The MSE value for a polynomial of order 5, OLS train: 0.0050281700476624775\n",
-      "sam 16\n",
-      "\n",
-      "The R2 value for a polynomial of order 5, OLS train: 0.9503788416421953\n",
-      "The MSE value for a polynomial of order 5, OLS train: 0.0039471961418905376\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-54-73c5d00185f3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     60\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mbeta\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 62\u001b[0;31m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0myy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0molsRegression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mn_epochs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msamPerMini\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0metas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-54-73c5d00185f3>\u001b[0m in \u001b[0;36molsRegression\u001b[0;34m(X_train, X_test, y_train, y_test, n_epochs, samPerMini, etas)\u001b[0m\n\u001b[1;32m     43\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"sam\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msamPerMini\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m             \u001b[0mbeta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnormal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscale\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m             \u001b[0mbeta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmomentumSGD\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbeta\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_epochs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0msamPerMini\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msamPerMini\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0meta\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m             \u001b[0mbetaAna\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpinv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-54-73c5d00185f3>\u001b[0m in \u001b[0;36mmomentumSGD\u001b[0;34m(beta, n_epochs, numMiniBatch, samPerMini, eta)\u001b[0m\n\u001b[1;32m     30\u001b[0m             \u001b[0myi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0msamPerMini\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0msamPerMini\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m             \u001b[0mgradients\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0msamPerMini\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mxi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxi\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mbeta\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0myi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m             \u001b[0mvelocity\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgamma\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mvelocity\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mgamma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mgradients\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;31m#             eta = learning_schedule(epoch*m+i)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -219,8 +164,8 @@
     "    \n",
     "    for eta in etas:\n",
     "        print(\"eta\", eta)\n",
-    "        for i, _samPerMini in enumerate(samPerMini):\n",
-    "            print(\"sam\", _samPerMini)\n",
+    "        for i in range(len(samPerMini)):\n",
+    "            print(\"sam\", samPerMini[i])\n",
     "            beta = np.random.normal(scale=0.1, size=(X_train.shape[1],1))\n",
     "            beta = momentumSGD(beta, n_epochs, np.int(m/samPerMini[i]), samPerMini[i], eta)\n",
     "\n",
@@ -246,8 +191,106 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eta 0.0001\n",
+      "sam 4\n",
+      "0.0001\n",
+      "\n",
+      "The R2 value for a polynomial of order 5, OLS train: 0.8638910307836747\n",
+      "The MSE value for a polynomial of order 5, OLS train: 0.010827010411434218\n",
+      "0.001\n",
+      "\n",
+      "The R2 value for a polynomial of order 5, OLS train: 0.8720339884550596\n",
+      "The MSE value for a polynomial of order 5, OLS train: 0.010179265534696297\n",
+      "0.01\n",
+      "\n",
+      "The R2 value for a polynomial of order 5, OLS train: 0.8647571802134268\n",
+      "The MSE value for a polynomial of order 5, OLS train: 0.010758111139418713\n",
+      "0.05\n",
+      "\n",
+      "The R2 value for a polynomial of order 5, OLS train: 0.8498251374806491\n",
+      "The MSE value for a polynomial of order 5, OLS train: 0.01194590488337702\n",
+      "eta 0.001\n",
+      "sam 4\n",
+      "0.0001\n",
+      "\n",
+      "The R2 value for a polynomial of order 5, OLS train: 0.9027796702252523\n",
+      "The MSE value for a polynomial of order 5, OLS train: 0.007733550027855245\n",
+      "0.001\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(26)\n",
+    "\n",
+    "sig2 = 0#.01 # noise variance\n",
+    "degree = 5 # polynomial degree\n",
+    "n = 16 # number of data points for each feature\n",
+    "\n",
+    "x1, x2, y = createDataPoints(n, sig2)\n",
+    "X = createDesignMatrix(x1,x2,degree)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.25)\n",
+    "X_train, X_test = Scale(X_train, X_test)\n",
+    "y_train = y_train[:, np.newaxis]\n",
+    "\n",
+    "m = X_train.shape[0] # number of training examples\n",
+    "samPerMini = [4] # number of samples per mini-batch    \n",
+    "etas = [1E-4, 1E-3, 1E-2, 5E-2] # learning rates to use\n",
+    "lmbs = [1E-4, 1E-3, 1E-2, 5E-2]    \n",
+    "    \n",
+    "n_epochs = 10000 # number of epochs\n",
+    "t0, t1 = 5, 50\n",
+    "def learning_schedule(t):\n",
+    "    return t0/(t+t1)\n",
+    "\n",
+    "def momentumSGD(beta, n_epochs, numMiniBatch, samPerMini, eta, lmb):\n",
+    "    gamma = 0.9\n",
+    "    velocity = 0\n",
+    "    for epoch in range(n_epochs):\n",
+    "        for i in range(numMiniBatch):\n",
+    "\n",
+    "            xi = X_train[i*samPerMini:(i+1)*samPerMini]\n",
+    "            yi = y_train[i*samPerMini:(i+1)*samPerMini]\n",
+    "            \n",
+    "            gradients = 2/samPerMini * (xi.T @ ((xi @ beta)-yi) + lmb * beta)\n",
+    "            velocity = gamma*velocity + (1-gamma)*gradients\n",
+    "#             eta = learning_schedule(epoch*m+i)\n",
+    "            beta = beta - eta*velocity\n",
+    "    return beta\n",
+    "\n",
+    "def ridgeRegression(X_train,X_test,y_train,y_test, n_epochs, samPerMini, etas):\n",
+    "    \n",
+    "    for eta in etas:\n",
+    "        print(\"eta\", eta)\n",
+    "        for i in range(len(samPerMini)):\n",
+    "            print(\"sam\", samPerMini[i])\n",
+    "            for lmb in lmbs:\n",
+    "                print(lmb)\n",
+    "                beta = np.random.normal(scale=0.1, size=(X_train.shape[1],1))\n",
+    "                beta = momentumSGD(beta, n_epochs, np.int(m/samPerMini[i]), samPerMini[i], eta, lmb)\n",
+    "\n",
+    "                betaAna = np.linalg.pinv(X_train.T.dot(X_train)).dot(X_train.T).dot(y_train)\n",
+    "                y_tilde = (X_train @ beta)\n",
+    "                y_ana = (X_train @ betaAna)\n",
+    "                y_pred = (X_test @ beta)\n",
+    "\n",
+    "            #     print(f\"The R2 value for a polynomial of order {degree}, OLS test: {R2(y_test, y_pred)}\")\n",
+    "            #     print(f\"The MSE value for a polynomial of order {degree}, OLS test: {MSE(y_test, y_pred)}\")\n",
+    "                print(f\"\\nThe R2 value for a polynomial of order {degree}, OLS train: {R2(y_train, y_tilde)}\")\n",
+    "                print(f\"The MSE value for a polynomial of order {degree}, OLS train: {MSE(y_train, y_tilde)}\")\n",
+    "\n",
+    "    #             print(f\"\\nThe R2 value for a polynomial of order {degree}, Ana train: {R2(y_train, y_ana)}\")\n",
+    "    #             print(f\"The MSE value for a polynomial of order {degree}, Ana train: {MSE(y_train, y_ana)}\")\n",
+    "\n",
+    "    return beta, y_pred\n",
+    "\n",
+    "_, yy = ridgeRegression(X_train,X_test,y_train,y_test,n_epochs, samPerMini, etas)"
+   ]
   }
  ],
  "metadata": {
